Crash in KlassFactory::check_shared_class_file_load_hook

XMLWordPrintable

    • b15

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fb1ce60b22b, pid=25030, tid=25031
        #
        # JRE version: Java(TM) SE Runtime Environment (13.0+13) (build 13-ea+13)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (13-ea+13, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x9ba22b] KlassFactory::check_shared_class_file_load_hook(InstanceKlass*, Symbol*, Handle, Handle, ClassFileStream const*, Thread*)+0x5b
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /ssd/home/eric/views/perfstartup-apps/spring-greeting/target/core.25030)
        #
        # An error report file with more information is saved as:
        # /ssd/home/eric/views/perfstartup-apps/spring-greeting/target/hs_err_pid25030.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

              Assignee:
              Ioi Lam
              Reporter:
              Eric Caspole
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: