8221351: Crash in KlassFactory::check_shared_class_file_load_hook

Reviewed-by: dholmes, ccheung